# kalshi-prediction-market

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
01_exchange_info/: 01_exchange_status.py  02_exchange_schedule.py  03_exchange_announcements.py
02_market_discovery/: 01_list_series.py  02_get_series.py  03_list_events.py  04_get_event.py  05_list_markets.py  06_get_market.py
03_market_data/: 01_get_orderbook.py  02_get_candlesticks.py  03_batch_candlesticks.py  04_get_public_trades.py
04_portfolio/: 01_get_balance.py  02_get_positions.py  03_get_fills.py  04_get_settlements.py
05_orders/: 01_create_order.py  02_get_order.py  03_list_orders.py  04_amend_order.py  05_decrease_order.py  06_cancel_order.py  07_order_queue_position.py
06_batch_operations/: 01_batch_create_orders.py  02_batch_cancel_orders.py
07_order_groups/: 01_create_order_group.py  02_list_order_groups.py  03_order_with_group.py  04_manage_order_group.py
08_historical/: 01_historical_cutoff.py  02_historical_markets.py  03_historical_candlesticks.py  04_historical_fills.py
09_account_management/: 01_get_api_keys.py  02_account_limits.py
10_websocket/: 01_ws_ticker.py  02_ws_orderbook.py  03_ws_public_trades.py  04_ws_user_orders.py  05_ws_user_fills.py  06_ws_market_lifecycle.py
auth/: client.py
docs/: kalshi_api_reference.md  kalshi_sports_edge_spec.md
kalshi_sports_edge/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py
kalshi_sports_edge/output/: html_report.py  pdf_report.py  terminal.py
kalshi_sports_edge/services/: deep_research.py  (+5 more)
