[project]
name = "kalshi-prediction-market"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "kalshi_python_sync>=2.0.0",
    "kalshi_python_async>=2.0.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "requests>=2.32.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0", "mypy>=1.13.0", "pytest>=8.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth", "kalshi_sports_edge"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
